--- a/KnowItAll/Base.lproj/Main.storyboard
+++ b/KnowItAll/Base.lproj/Main.storyboard
@@ -14,6 +14,7 @@
             <string>Avenir-Light</string>
         </array>
         <array key="AvenirNext.ttc">
+            <string>AvenirNext-DemiBold</string>
             <string>AvenirNext-Medium</string>
             <string>AvenirNext-Regular</string>
         </array>
@@ -62,7 +63,7 @@
                                             <constraint firstAttribute="height" constant="1" id="5GF-K4-NNQ"/>
                                         </constraints>
                                     </view>
-                                    <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="Password" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="cE9-hT-B4H">
+                                    <textField opaque="NO" clipsSubviews="YES" tag="1" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="Password" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="cE9-hT-B4H">
                                         <rect key="frame" x="0.0" y="60" width="313" height="50"/>
                                         <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
                                         <constraints>
@@ -166,20 +167,45 @@
                                     <constraint firstAttribute="trailing" secondItem="Vba-NU-QtJ" secondAttribute="trailing" id="zq6-l1-cVY"/>
                                 </constraints>
                             </view>
+                            <label hidden="YES" opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Sorry, please fill out all fields correctly." textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="IFe-qa-9vm">
+                                <rect key="frame" x="26" y="166" width="323" height="17"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" relation="greaterThanOrEqual" constant="17" id="PBk-sl-jJy"/>
+                                    <constraint firstAttribute="height" constant="17" id="qUZ-r2-due"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" name="AvenirNext-DemiBold" family="Avenir Next" pointSize="15"/>
+                                <color key="textColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <activityIndicatorView hidden="YES" opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" animating="YES" style="whiteLarge" translatesAutoresizingMaskIntoConstraints="NO" id="sLp-2x-cbs">
+                                <rect key="frame" x="162" y="484" width="50" height="50"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="50" id="ZmU-kE-OaM"/>
+                                    <constraint firstAttribute="width" constant="50" id="wEa-H4-Rui"/>
+                                </constraints>
+                            </activityIndicatorView>
                         </subviews>
                         <color key="backgroundColor" red="0.76862745098039209" green="0.11764705882352941" blue="0.22745098039215686" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <constraints>
+                            <constraint firstItem="NhH-Yg-TUz" firstAttribute="top" secondItem="IFe-qa-9vm" secondAttribute="bottom" constant="8" id="7PJ-qD-SFN"/>
                             <constraint firstItem="NhH-Yg-TUz" firstAttribute="centerX" secondItem="aMe-Ol-lNQ" secondAttribute="centerX" id="9Tu-cl-gae"/>
+                            <constraint firstItem="IFe-qa-9vm" firstAttribute="leading" secondItem="aMe-Ol-lNQ" secondAttribute="leadingMargin" constant="10" id="Ad1-oj-wFF"/>
                             <constraint firstItem="nrX-u5-PXU" firstAttribute="top" secondItem="ay2-lz-VNQ" secondAttribute="bottom" constant="50" id="GVU-qM-mbM"/>
                             <constraint firstItem="NhH-Yg-TUz" firstAttribute="centerY" secondItem="aMe-Ol-lNQ" secondAttribute="centerY" id="J3H-91-hmo"/>
+                            <constraint firstItem="sLp-2x-cbs" firstAttribute="centerX" secondItem="aMe-Ol-lNQ" secondAttribute="centerX" id="JaA-Nr-Olb"/>
                             <constraint firstAttribute="trailingMargin" secondItem="nrX-u5-PXU" secondAttribute="trailing" constant="36" id="LgD-bF-Ert"/>
                             <constraint firstAttribute="trailingMargin" secondItem="NhH-Yg-TUz" secondAttribute="trailing" constant="15" id="QQB-1f-xYa"/>
                             <constraint firstItem="nrX-u5-PXU" firstAttribute="leading" secondItem="aMe-Ol-lNQ" secondAttribute="leadingMargin" constant="36" id="RDs-MT-ING"/>
+                            <constraint firstItem="IFe-qa-9vm" firstAttribute="top" secondItem="nrX-u5-PXU" secondAttribute="bottom" constant="8" id="b5l-tI-8bN"/>
+                            <constraint firstItem="sLp-2x-cbs" firstAttribute="top" secondItem="NhH-Yg-TUz" secondAttribute="bottom" constant="8" id="eZo-7B-e9l"/>
+                            <constraint firstAttribute="trailingMargin" secondItem="IFe-qa-9vm" secondAttribute="trailing" constant="10" id="kCn-MV-glr"/>
                             <constraint firstItem="NhH-Yg-TUz" firstAttribute="leading" secondItem="aMe-Ol-lNQ" secondAttribute="leadingMargin" constant="15" id="u3J-7o-RmY"/>
                         </constraints>
                     </view>
                     <connections>
                         <outlet property="emailField" destination="gau-Vf-GfL" id="cBF-3j-ngc"/>
+                        <outlet property="errorLabel" destination="IFe-qa-9vm" id="09Z-bc-e31"/>
+                        <outlet property="indicator" destination="sLp-2x-cbs" id="GwM-vv-UMo"/>
                         <outlet property="passwordField" destination="cE9-hT-B4H" id="44g-dp-S1M"/>
                     </connections>
                 </viewController>
