--- a/KnowItAll/HomePage.storyboard
+++ b/KnowItAll/HomePage.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="13196" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="IZw-KB-tqS">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="13196" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="D8O-d5-Cc5">
     <device id="retina4_7" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
@@ -10,7 +10,7 @@
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
-        <!--Home-->
+        <!--Home Page-->
         <scene sceneID="h2S-n7-7ot">
             <objects>
                 <viewController storyboardIdentifier="HomePage" id="IZw-KB-tqS" customClass="HomePage" customModule="KnowItAll" customModuleProvider="target" sceneMemberID="viewController">
@@ -304,6 +304,7 @@
                             </tableView>
                             <searchBar contentMode="redraw" placeholder="Search KnowItAll..." translatesAutoresizingMaskIntoConstraints="NO" id="CQL-vF-DBc">
                                 <rect key="frame" x="0.0" y="20" width="375" height="56"/>
+                                <color key="backgroundColor" red="1" green="0.14901960784313725" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="56" id="xfE-Mn-jhr"/>
                                 </constraints>
@@ -336,9 +337,7 @@
                             <constraint firstItem="8hF-e6-zj4" firstAttribute="leading" secondItem="UXB-QJ-IzI" secondAttribute="leading" id="zKa-x8-OJU"/>
                         </constraints>
                     </view>
-                    <tabBarItem key="tabBarItem" title="Home" image="home" id="OqG-vs-uPI">
-                        <offsetWrapper key="titlePositionAdjustment" horizontal="0.0" vertical="0.0"/>
-                    </tabBarItem>
+                    <navigationItem key="navigationItem" id="SUN-uP-yd2"/>
                     <simulatedTabBarMetrics key="simulatedBottomBarMetrics"/>
                     <connections>
                         <outlet property="academicView" destination="gQa-ah-B4N" id="dGH-ZX-bnk"/>
@@ -350,6 +349,8 @@
                         <outlet property="segmentedControl" destination="zRL-FX-lx3" id="oug-cz-vzU"/>
                         <outlet property="tableView" destination="puX-sx-CA2" id="bnT-OO-dDD"/>
                         <outlet property="topView" destination="mh6-h2-ubQ" id="bq2-Dd-d74"/>
+                        <segue destination="qgM-qd-bD4" kind="show" identifier="showPollPage" id="593-sT-lwC"/>
+                        <segue destination="8LD-2y-b75" kind="show" identifier="showReviewPage" id="Ss9-dR-4ET"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="7yt-zu-Kke" userLabel="First Responder" sceneMemberID="firstResponder"/>
@@ -362,7 +363,44 @@
                     </connections>
                 </searchDisplayController>
             </objects>
-            <point key="canvasLocation" x="322.39999999999998" y="-253.2233883058471"/>
+            <point key="canvasLocation" x="661.60000000000002" y="-253.2233883058471"/>
+        </scene>
+        <!--PollPage-->
+        <scene sceneID="OAC-im-zqh">
+            <objects>
+                <viewControllerPlaceholder storyboardName="PollPage" id="qgM-qd-bD4" sceneMemberID="viewController"/>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="t1f-Ce-DZR" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1318" y="-281"/>
+        </scene>
+        <!--ReviewPage-->
+        <scene sceneID="NII-bu-hYT">
+            <objects>
+                <viewControllerPlaceholder storyboardName="ReviewPage" id="8LD-2y-b75" sceneMemberID="viewController"/>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="b98-ra-SzB" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1324" y="-180"/>
+        </scene>
+        <!--Home-->
+        <scene sceneID="NBW-Hs-JLy">
+            <objects>
+                <navigationController automaticallyAdjustsScrollViewInsets="NO" navigationBarHidden="YES" id="D8O-d5-Cc5" sceneMemberID="viewController">
+                    <tabBarItem key="tabBarItem" title="Home" image="home" id="OqG-vs-uPI">
+                        <offsetWrapper key="titlePositionAdjustment" horizontal="0.0" vertical="0.0"/>
+                    </tabBarItem>
+                    <toolbarItems/>
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" translucent="NO" id="I0q-eb-D1D">
+                        <autoresizingMask key="autoresizingMask"/>
+                        <color key="barTintColor" red="0.76862745099999996" green="0.1176470588" blue="0.2274509804" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                    </navigationBar>
+                    <nil name="viewControllers"/>
+                    <connections>
+                        <segue destination="IZw-KB-tqS" kind="relationship" relationship="rootViewController" id="lbV-QX-CZr"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="4Fv-zM-JcY" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="-193" y="-253"/>
         </scene>
     </scenes>
     <resources>
