--- a/KnowItAll/ReviewPage.storyboard
+++ b/KnowItAll/ReviewPage.storyboard
@@ -6,6 +6,7 @@
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="13173"/>
+        <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
@@ -18,21 +19,152 @@
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Star Wars" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="r1g-3X-OBY">
-                                <rect key="frame" x="150" y="60" width="75" height="21"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                <nil key="textColor"/>
-                                <nil key="highlightedColor"/>
-                            </label>
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="100" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="Sdl-3O-ep4">
+                                <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <view key="tableHeaderView" contentMode="scaleToFill" id="X1q-AO-P9c">
+                                    <rect key="frame" x="0.0" y="0.0" width="375" height="140"/>
+                                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                    <subviews>
+                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" text="Star Wars" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="qu3-W3-nHj">
+                                            <rect key="frame" x="8" y="0.0" width="251" height="38"/>
+                                            <constraints>
+                                                <constraint firstAttribute="height" constant="38" id="rne-7A-xs9"/>
+                                            </constraints>
+                                            <fontDescription key="fontDescription" type="system" weight="light" pointSize="32"/>
+                                            <nil key="textColor"/>
+                                            <nil key="highlightedColor"/>
+                                        </label>
+                                        <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="Entertainment" translatesAutoresizingMaskIntoConstraints="NO" id="8HU-UB-45K">
+                                            <rect key="frame" x="267" y="10" width="100" height="100"/>
+                                            <constraints>
+                                                <constraint firstAttribute="width" constant="100" id="Mh8-fL-PcQ"/>
+                                                <constraint firstAttribute="height" constant="100" id="hNj-ir-G8X"/>
+                                            </constraints>
+                                        </imageView>
+                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="30 Reviews" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Gps-wz-WNE">
+                                            <rect key="frame" x="8" y="60" width="88" height="21"/>
+                                            <constraints>
+                                                <constraint firstAttribute="height" constant="21" id="F9C-5P-1cm"/>
+                                                <constraint firstAttribute="width" constant="88" id="FxY-Bd-btP"/>
+                                            </constraints>
+                                            <fontDescription key="fontDescription" type="system" weight="light" pointSize="17"/>
+                                            <nil key="textColor"/>
+                                            <nil key="highlightedColor"/>
+                                        </label>
+                                        <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="f4h-ZO-Xz4" customClass="CosmosView" customModule="Cosmos">
+                                            <rect key="frame" x="8" y="100" width="120" height="20"/>
+                                            <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                            <constraints>
+                                                <constraint firstAttribute="width" constant="120" id="d7e-T6-6XT"/>
+                                            </constraints>
+                                        </view>
+                                        <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="G4P-nq-Vva">
+                                            <rect key="frame" x="0.0" y="130" width="375" height="10"/>
+                                            <subviews>
+                                                <view alpha="0.5" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Hf8-6V-Nws">
+                                                    <rect key="frame" x="0.0" y="0.0" width="375" height="1"/>
+                                                    <color key="backgroundColor" white="0.66666666669999997" alpha="1" colorSpace="calibratedWhite"/>
+                                                    <constraints>
+                                                        <constraint firstAttribute="height" constant="1" id="z7r-A4-k4w"/>
+                                                    </constraints>
+                                                </view>
+                                                <view alpha="0.5" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Uah-KX-sDx">
+                                                    <rect key="frame" x="0.0" y="10" width="375" height="1"/>
+                                                    <color key="backgroundColor" white="0.66666666669999997" alpha="1" colorSpace="calibratedWhite"/>
+                                                    <constraints>
+                                                        <constraint firstAttribute="height" constant="1" id="Iwp-re-WeB"/>
+                                                        <constraint firstAttribute="height" relation="greaterThanOrEqual" constant="1" id="ijk-mT-dJ7"/>
+                                                    </constraints>
+                                                </view>
+                                            </subviews>
+                                            <color key="backgroundColor" red="0.86274509799999999" green="0.86274509799999999" blue="0.86274509799999999" alpha="0.59999999999999998" colorSpace="calibratedRGB"/>
+                                            <constraints>
+                                                <constraint firstItem="Uah-KX-sDx" firstAttribute="top" secondItem="Hf8-6V-Nws" secondAttribute="bottom" constant="9" id="6BY-DL-UhP"/>
+                                                <constraint firstAttribute="trailing" secondItem="Hf8-6V-Nws" secondAttribute="trailing" id="72H-O8-mLi"/>
+                                                <constraint firstAttribute="height" constant="10" id="7Iu-XL-tBF"/>
+                                                <constraint firstItem="Hf8-6V-Nws" firstAttribute="top" secondItem="G4P-nq-Vva" secondAttribute="top" id="FqK-bP-Rls"/>
+                                                <constraint firstItem="Uah-KX-sDx" firstAttribute="leading" secondItem="G4P-nq-Vva" secondAttribute="leading" id="Iei-Kb-adV"/>
+                                                <constraint firstAttribute="trailing" secondItem="Uah-KX-sDx" secondAttribute="trailing" id="QgP-A6-oJL"/>
+                                                <constraint firstItem="Hf8-6V-Nws" firstAttribute="leading" secondItem="G4P-nq-Vva" secondAttribute="leading" id="lu7-6E-nAc"/>
+                                            </constraints>
+                                        </view>
+                                    </subviews>
+                                    <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                    <constraints>
+                                        <constraint firstItem="Gps-wz-WNE" firstAttribute="top" secondItem="qu3-W3-nHj" secondAttribute="bottom" constant="22" id="60I-OD-ALZ"/>
+                                        <constraint firstAttribute="bottom" secondItem="G4P-nq-Vva" secondAttribute="bottom" id="Mgz-sH-Tg4"/>
+                                        <constraint firstAttribute="trailing" secondItem="G4P-nq-Vva" secondAttribute="trailing" id="Qgk-ox-Iip"/>
+                                        <constraint firstItem="8HU-UB-45K" firstAttribute="top" secondItem="X1q-AO-P9c" secondAttribute="top" constant="10" id="TfY-c6-NFV"/>
+                                        <constraint firstItem="f4h-ZO-Xz4" firstAttribute="top" secondItem="Gps-wz-WNE" secondAttribute="bottom" constant="19" id="Tzc-JB-crn"/>
+                                        <constraint firstItem="G4P-nq-Vva" firstAttribute="top" secondItem="f4h-ZO-Xz4" secondAttribute="bottom" constant="10" id="YOm-Wf-n59"/>
+                                        <constraint firstItem="Gps-wz-WNE" firstAttribute="leading" secondItem="X1q-AO-P9c" secondAttribute="leading" constant="8" id="fsB-82-n5F"/>
+                                        <constraint firstAttribute="trailing" secondItem="8HU-UB-45K" secondAttribute="trailing" constant="8" id="hh2-rW-JOf"/>
+                                        <constraint firstItem="qu3-W3-nHj" firstAttribute="top" secondItem="X1q-AO-P9c" secondAttribute="top" id="jQO-i9-vBz"/>
+                                        <constraint firstItem="qu3-W3-nHj" firstAttribute="leading" secondItem="X1q-AO-P9c" secondAttribute="leading" constant="8" id="lkw-VM-JtL"/>
+                                        <constraint firstItem="f4h-ZO-Xz4" firstAttribute="leading" secondItem="X1q-AO-P9c" secondAttribute="leading" constant="8" id="rcY-K2-xz1"/>
+                                        <constraint firstItem="G4P-nq-Vva" firstAttribute="leading" secondItem="X1q-AO-P9c" secondAttribute="leading" id="tWL-ev-zNo"/>
+                                    </constraints>
+                                </view>
+                                <prototypes>
+                                    <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="ReviewCell" rowHeight="100" id="zGa-YY-YEj" customClass="SpecificReviewCell" customModule="KnowItAll" customModuleProvider="target">
+                                        <rect key="frame" x="0.0" y="168" width="375" height="100"/>
+                                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                        <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="zGa-YY-YEj" id="eDG-ld-lXk">
+                                            <rect key="frame" x="0.0" y="0.0" width="375" height="99.5"/>
+                                            <autoresizingMask key="autoresizingMask"/>
+                                            <subviews>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ktF-DM-rOg">
+                                                    <rect key="frame" x="8" y="39" width="359" height="53"/>
+                                                    <string key="text">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum is simply dummy text of the printing and typesetting industry. </string>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                    <nil key="textColor"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                                <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="T9C-1I-Mwy" customClass="CosmosView" customModule="Cosmos">
+                                                    <rect key="frame" x="0.0" y="8" width="120" height="20"/>
+                                                    <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                                    <constraints>
+                                                        <constraint firstAttribute="height" constant="20" id="wOv-UX-lFO"/>
+                                                    </constraints>
+                                                </view>
+                                            </subviews>
+                                            <constraints>
+                                                <constraint firstItem="T9C-1I-Mwy" firstAttribute="top" secondItem="eDG-ld-lXk" secondAttribute="topMargin" id="IQP-Rk-jqm"/>
+                                                <constraint firstItem="ktF-DM-rOg" firstAttribute="leading" secondItem="eDG-ld-lXk" secondAttribute="leading" constant="8" id="LEd-6J-tv0"/>
+                                                <constraint firstItem="ktF-DM-rOg" firstAttribute="top" secondItem="T9C-1I-Mwy" secondAttribute="bottom" constant="11" id="YUT-od-M8F"/>
+                                                <constraint firstItem="T9C-1I-Mwy" firstAttribute="leading" secondItem="eDG-ld-lXk" secondAttribute="leadingMargin" constant="-8" id="ZgS-bN-0Bl"/>
+                                                <constraint firstAttribute="trailing" secondItem="ktF-DM-rOg" secondAttribute="trailing" constant="8" id="ojT-H0-Ide"/>
+                                                <constraint firstAttribute="bottom" secondItem="ktF-DM-rOg" secondAttribute="bottom" constant="7.5" id="ylm-FH-Ix8"/>
+                                            </constraints>
+                                        </tableViewCellContentView>
+                                        <viewLayoutGuide key="safeArea" id="gew-If-Zdb"/>
+                                        <connections>
+                                            <outlet property="stars" destination="T9C-1I-Mwy" id="L4h-Pc-qmG"/>
+                                        </connections>
+                                    </tableViewCell>
+                                </prototypes>
+                            </tableView>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <constraints>
+                            <constraint firstItem="Sdl-3O-ep4" firstAttribute="bottom" secondItem="svd-MB-WFY" secondAttribute="bottom" id="CGM-vC-vOO"/>
+                            <constraint firstItem="Sdl-3O-ep4" firstAttribute="trailing" secondItem="svd-MB-WFY" secondAttribute="trailing" id="SAN-L0-nkc"/>
+                            <constraint firstItem="Sdl-3O-ep4" firstAttribute="leading" secondItem="svd-MB-WFY" secondAttribute="leading" id="ma6-Gf-4yr"/>
+                            <constraint firstItem="Sdl-3O-ep4" firstAttribute="top" secondItem="bXS-9U-PKL" secondAttribute="top" id="pd6-mg-bPW"/>
+                        </constraints>
                         <viewLayoutGuide key="safeArea" id="svd-MB-WFY"/>
                     </view>
+                    <connections>
+                        <outlet property="tableView" destination="Sdl-3O-ep4" id="0WB-Ln-STO"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="L4C-Lt-OtS" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="172" y="-79"/>
+            <point key="canvasLocation" x="170.40000000000001" y="-80.50974512743629"/>
         </scene>
     </scenes>
+    <resources>
+        <image name="Entertainment" width="64" height="64"/>
+    </resources>
 </document>
