--- a/KnowItAll/Search.storyboard
+++ b/KnowItAll/Search.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="13196" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="XIp-QC-Y7u">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="13196" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="DqU-3g-G4a">
     <device id="retina4_7" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
@@ -10,6 +10,22 @@
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
+        <!--Navigation Controller-->
+        <scene sceneID="oo7-fh-8tC">
+            <objects>
+                <navigationController navigationBarHidden="YES" id="DqU-3g-G4a" sceneMemberID="viewController">
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="oY6-KJ-fTR">
+                        <autoresizingMask key="autoresizingMask"/>
+                        <color key="barTintColor" red="0.76862745099999996" green="0.1176470588" blue="0.2274509804" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                    </navigationBar>
+                    <connections>
+                        <segue destination="XIp-QC-Y7u" kind="relationship" relationship="rootViewController" id="5lb-NY-wnR"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="29A-JR-ZOF" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="-1326" y="846"/>
+        </scene>
         <!--SearchVC-->
         <scene sceneID="yee-od-JbU">
             <objects>
@@ -246,15 +262,34 @@
                         </constraints>
                     </view>
                     <tabBarItem key="tabBarItem" systemItem="search" id="Rou-Li-5Tk"/>
+                    <navigationItem key="navigationItem" id="NMV-D4-7Yz"/>
                     <simulatedTabBarMetrics key="simulatedBottomBarMetrics"/>
                     <connections>
                         <outlet property="searchBar" destination="OOP-Lg-5Z5" id="iS8-Ws-pG3"/>
                         <outlet property="tableView" destination="sFq-pZ-aId" id="E6t-xF-pJK"/>
+                        <segue destination="eq0-rA-Cg9" kind="show" identifier="showReviewPage" id="hOk-Jm-Zxe"/>
+                        <segue destination="9oB-Cu-X2S" kind="show" identifier="showPollPage" id="xRo-Z7-2vL"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="GL4-Qg-WRW" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="-372" y="819.94002998500753"/>
+        </scene>
+        <!--ReviewPage-->
+        <scene sceneID="T3f-IQ-obS">
+            <objects>
+                <viewControllerPlaceholder storyboardName="ReviewPage" id="eq0-rA-Cg9" sceneMemberID="viewController"/>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="ZOE-03-QeW" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="374" y="726"/>
+        </scene>
+        <!--PollPage-->
+        <scene sceneID="0hm-Bj-4Wq">
+            <objects>
+                <viewControllerPlaceholder storyboardName="PollPage" id="9oB-Cu-X2S" sceneMemberID="viewController"/>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="49W-Sx-s5D" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="329" y="806"/>
         </scene>
     </scenes>
     <resources>
